<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team.courseselector.SubjectActivity">

    <include
        android:id="@+id/tb_appbar_subject"
        layout="@layout/toolbar"
        />
        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/tb_appbar_subject"
            android:id="@+id/rv_subject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

</RelativeLayout>
